[package]
authors = ["yuyoyuppe"]
name = "process_sniper"
version = "1.0.1"
edition = "2021"
license = "MIT"
rust-version = "1.63"

[dependencies]
serde = { version = "1", features = ["derive"] }
sysinfo = "0"
libc = "0"
toml = "0"
winapi = "0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

